# sync_translate

./: main.py  pyproject.toml
lib/: recognition.py  types.py
