[tool.poetry]
name = "sync-translate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
assemblyai = "^0.26.0"
pyaudio = "^0.2.14"
scipy = "^1.13.0"
speechrecognition = "^3.10.4"
translate = "^3.6.1"
gtts = "^2.5.1"
av = "^12.0.0"
pydub = "^0.25.1"
ffmpeg = "^1.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
